--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.application.name=balpumStorage
 spring.servlet.multipart.max-file-size=32MB
 spring.servlet.multipart.max-request-size=32MB
+storage.location=files
