--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 spring.application.name=balpumStorage
-spring.servlet.multipart.max-file-size=32MB
-spring.servlet.multipart.max-request-size=32MB
-storage.location=files
+spring.servlet.multipart.max-file-size=16MB
+spring.servlet.multipart.max-request-size=16MB
+storage.location=/home/walabfiles/files
+#storage.location=/Users/dosaa/Documents/files
+server.servlet.context-path=/Balpum
