html로 파일 업로드, 불러오기 확인가능

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,21 @@
+# DataSource Configuration
+spring.datasource.url=jdbc:mysql://walab.handong.edu:3306/p2_21500240
+spring.datasource.username=p2_21500240
+spring.datasource.password=CBJVNY24rK7kXDKo
+
+# JPA Configuration
+spring.jpa.hibernate.ddl-auto=update
+
+# Application Configuration
 spring.application.name=balpumStorage
+
+# File Upload Configuration
 spring.servlet.multipart.max-file-size=16MB
 spring.servlet.multipart.max-request-size=16MB
+
+# Storage Configuration
 storage.location=/home/walabfiles/files
 #storage.location=/Users/dosaa/Documents/files
+
+# Server Configuration
 server.servlet.context-path=/Balpum
